# eplt

./: README  default.laws  eplt  eplt.cabal  theorems.test
src/: Assistant.hs  Commands.hs  Deriv.hs  Exceptions.hs  Formula.hs  Laws.hs  Lazy.hs  Main.hs  ModelBuilder.hs  Proof.hs  Prover.hs  ProverMonad.hs  Subst.hs  Test.hs  Version.hs
src/Commands/: Parser.hs
src/Configure/: Load.hs  Options.hs
src/Formula/: Parser.hs  Parser.hs~  Pretty.hs
