Name:                eplt
Version:             0.2
Description:         Equational Propositional Logic Toolkit
License:             GPL
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable eplt
  Main-is:           Main.hs
  other-modules:     Formula Formula.Parser Formula.Pretty Test Prover ProverMonad Laws Subst Commands Commands.Parser Deriv ModelBuilder Configure.Load Exceptions
  hs-source-dirs:    src
  Build-Depends:     base >= 4 && < 5, parsec >= 2, pretty >= 1.0.1.0, QuickCheck >= 2.1, logict >= 0.1, containers >= 0.2, mtl, haskeline, haskell98, MaybeT, combinat
